# quorum-mvp

./: .gitignore  AUDIT_NOTES.md  README.md
app/: .env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/prisma/: schema.prisma
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/api/projects/: route.ts
app/src/app/api/projects/[id]/: route.ts
app/src/app/api/sync/: route.ts
app/src/app/api/webhook/: route.ts
app/src/app/launch/: page.tsx
app/src/app/project/[id]/: page.tsx
app/src/lib/: anchor.ts  constants.ts  sync.ts
app/src/types/: index.ts
program/: Anchor.toml  package.json  version.md
program/programs/quorum/: Cargo.toml
program/programs/quorum/src/: constants.rs  errors.rs  lib.rs
program/programs/quorum/src/instructions/: contribute.rs  create_project.rs  dev_activity.rs  finalize_funding.rs  initialize_platform.rs  refund.rs  social_vote.rs
program/programs/quorum/src/ix/: claim_tokens.rs  close_vault.rs  contribute.rs  create_project.rs  create_project.rs.new  dev_activity.rs  finalize_funding.rs  graduate_project.rs  initialize_platform.rs  mod.rs  refund.rs  social_vote.rs
program/programs/quorum/src/state/: contribution.rs  mod.rs  platform.rs  project.rs  vault.rs  vote.rs
program/programs/quorum/src/utils/: price.rs
program/tests/: quorum.ts  quorum_bankrun.ts
scripts/: config.json  deploy.sh  idl.json  initialize.ts  package-lock.json  package.json  seed.ts  setup-helius-webhook.ts  tsconfig.json
