[package]
name = "quorum"
version = "0.1.0"
description = "Quorum Protocol - Community-validated token launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quorum"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lints.rust]
# Anchor/Solana macros expand cfg checks using features/target_os values that are internal
# to those crates but evaluated in the context of the consuming crate. Suppress them here.
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
] }

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token", "associated_token"] }
pyth-sdk-solana = "0.10.0"
# Pin blake3 to avoid block-buffer 0.12.0 (edition2024) which Cargo 1.79 can't parse
blake3 = "=1.5.4"
